Upgrade to Spring Boot 4